--- a/model_income_start.ipynb
+++ b/model_income_start.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "dfa08944-c971-4a1a-a21a-d875321c4827",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5e1a614b-0fbe-4e97-870d-d6cf7cf11102",
    "metadata": {
     "tags": []
@@ -65,21 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1bcc08ab-95e1-4f69-98d6-742d6ec6e26c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((76786, 224), (73214, 222))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_df = pd.read_csv('hackathon_income_train.csv', decimal=',', sep=';')\n",
-    "test_df = pd.read_csv('hackathon_income_test.csv', decimal=',', sep=';')\n",
+    "train_df = pd.read_csv(r'D:\\Desktop\\hack&change-alfa\\hack-change-alfa\\data\\raw\\hackathon_income_train.csv', decimal=',', sep=';')\n",
+    "test_df = pd.read_csv(r'D:\\Desktop\\hack&change-alfa\\hack-change-alfa\\data\\raw\\hackathon_income_test.csv', decimal=',', sep=';')\n",
     "train_df.shape, test_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a881be49-54e6-4a87-93ec-ca57332bebea",
    "metadata": {
     "tags": []
@@ -93,12 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bf767c63-0dce-481f-9200-47a158d93dbd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WMAE = 94448.34\n"
+     ]
+    }
+   ],
    "source": [
     "WMAE = weighted_mean_absolute_error(train_df['target'], train_df['predict'], train_df['w'])\n",
     "print(f\"WMAE = {WMAE:.2f}\")"
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "023b2338-6339-4b58-b769-05f6192776c7",
    "metadata": {
     "tags": []
@@ -131,13 +150,29 @@
    "outputs": [],
    "source": [
     "test_df['target'] = np.random.normal(mean, std, test_df.shape[0])\n",
-    "test_df[['id','target']].set_index('id').to_csv('submission.csv', decimal='.', sep=',')"
+    "test_df[['id','target']].set_index('id').to_csv(r'D:\\Desktop\\hack&change-alfa\\hack-change-alfa\\data\\processed\\submission_base.csv', decimal='.', sep=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84a3138",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea08090d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
